force-app/main/default/objects/smagicinteract__Incoming_MMS_Detail__c/smagicinteract__Incoming_MMS_Detail__c.object-meta.xml
<CustomObject>
    <label>Incoming MMS Detail</label>
    <nameField>
        <label>Incoming MMS Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incoming MMS Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>