force-app/main/default/objects/smagicinteract__Incoming_MMS_Detail__c/fields/smagicinteract__Incoming_SMS__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Incoming_SMS__c</fullName>
    <description>This field contains the ID of the related incoming SMS.</description>
    <label>Incoming SMS</label>
    <referenceTo>smagicinteract__Incoming_SMS__c</referenceTo>
    <relationshipLabel>Incoming MMS Details</relationshipLabel>
    <relationshipName>Incoming_MMS_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>