force-app/main/default/objects/smagicinteract__Incoming_MMS_Detail__c/fields/smagicinteract__MMS_Filename__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MMS_Filename__c</fullName>
    <label>MMS Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>