force-app/main/default/objects/smagicinteract__Incoming_MMS_Detail__c/fields/smagicinteract__MMS_URL__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__MMS_URL__c</fullName>
    <description>This field contains the URL of the MMS.</description>
    <label>MMS URL</label>
    <type>Url</type>
</CustomField>